--- a/aulaJovemProgramador/.github/workflows/docker.yml
+++ b/aulaJovemProgramador/.github/workflows/docker.yml
@@ -9,69 +9,58 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v3
 
-      - name: 🔧 Instalar o docker compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+    - name: Checkout do código
+      uses: actions/checkout@v3,
 
-      - name: 🐋 Subir ambiente com Docker Compose
-        run: docker-compose up -d
 
-      - name: ⏱️ Aguardar os contêineres estabilizarem
-        run: |
-          echo "Aguardando 30 segundos para os serviços iniciarem..."
-          sleep 30
+    - name:  Subir ambiente com Docker Compose (v2)
+      run: docker compose up -d,
 
-      - name: 🩺 Verificar status dos contêineres
-        run: |
-          echo "--- Status dos Contêineres (incluindo os que falharam) ---"
-          docker-compose ps -a
-            
-          echo "--- Logs do Banco de Dados ---"
-          docker-compose logs meu-postgres-local 
-            
-          echo "--- Logs da API ---"
-          docker-compose logs api-aula
 
-      - name: 📞 Testar API (com retentativas)
-        run: |
-          echo "Aguardando a API ficar online... (Máx 2 min)"
-          n=0
-          until [ $n -ge 12 ]
-          do
-          # O "curl --fail" falha com exit code se o HTTP não for 200
+    - name:  Aguardar os contêineres estabilizarem
+      run: |
+        echo "Aguardando 30 segundos para os serviços iniciarem..."
+        sleep 30,
+    
+
+    - name:  Testar API (com retentativas)
+      run: |
+        echo "Aguardando a API ficar online... (Máx 2 min)"
+        n=0
+        until [ $n -ge 12 ]
+        do
           if curl --fail http://localhost:8080/swagger-ui/index.html; then
-            echo "✅ API está online!"
-            break # Sucesso, sai do loop
-          fi
-            
-          n=$((n+1))
-          echo "Tentativa $n/12 falhou. Aguardando 10s..."
-          sleep 10
+            echo " API está online!"
+            break
+          fi,
+        
+            n=$((n+1))
+            echo "Tentativa $n/12 falhou. Aguardando 10s..."
+            sleep 10
           done
-            
-          # Se o loop terminar (n=12) sem sucesso, falha o build
+        
           if [ $n -eq 12 ]; then
-          echo "❌ API não respondeu após 2 minutos."
-          exit 1
+            echo " API não respondeu após 2 minutos."
+            exit 1
           fi
+    
 
-      - name: 🛑 Parar os contêineres após teste
-        if: always()
-        run: docker-compose down
+    - name:  Parar os contêineres após teste
+      if: always()
+      run: docker compose down,
 
-      - name: ✅ Login no Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 🚀 Build e Push da imagem para o Docker Hub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/jovemapi:latest
+    - name:  Login no Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }},
+
+
+    - name:  Build e Push da imagem para o Docker Hub
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/aulajovemprogramador:latest
