--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,4 +63,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/aulajovemprogramador:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/academia:latest
