--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/academia:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/academia-api:latest
