--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name=academia
 
 
 #Banco Local
-spring.datasource.url=jdbc:postgresql://localhost:5433/academia-db
-spring.datasource.username=postgres
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:postgresql://localhost:5433/academia-db
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
 
 
 #Banco Render
-#spring.datasource.url=jdbc:postgresql://dpg-d3slp89r0fns738jfjq0-a.oregon-postgres.render.com/jovemprogramador
-#spring.datasource.username=jovemprogramador
-#spring.datasource.password=RglmF6bjDOF2hCbwOdfN5nT5OjR082Mx
+spring.datasource.url=jdbc:postgresql://dpg-d4cepshr0fns7389risg-a.oregon-postgres.render.com/academia_db_rbhb
+spring.datasource.username=academia_db
+spring.datasource.password=mCA8nUdn5UbLTky0cSGBSz6j5ONOkyvV
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
